--- a/read_weights_float_2_binary.ipynb
+++ b/read_weights_float_2_binary.ipynb
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,20 +217,22 @@
     "        if number[-1-i] == '0':\n",
     "            number[-1-i] = '1'\n",
     "            break\n",
+    "        else:\n",
+    "            number[-1-i] = '0'\n",
     "            \n",
-    "    return ''.join(number)"
+    "    return ''.join(number)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 1249 0\n.0001111111111001\n"
+      "0 1 0\n.0001100110011001\n"
      ]
     }
    ],
@@ -303,44 +305,30 @@
     "  \n",
     "# print(float_bin(n, places = p)) \n",
     "# print(decimal_converter(123))\n",
-    "print(float_bin(.1249, places = 16))\n"
+    "\n",
+    "\n",
+    "print(float_bin(0.1, places=16))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "25140000000000003\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('025140000000000003'.lstrip('0'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.555625"
+       "'0x1999'"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "2.175*1.175"
+    "a= 0b0001100110011001\n",
+    "hex(a)"
    ]
   },
   {
@@ -349,106 +337,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "0000011110110100\n",
-    "1111100001001011\n",
-    "+ 1\n",
-    "---------------\n",
-    "1111100001001111"
+    "np.log2(.1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "a= 0b0000101010011111"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 131,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    ""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 131,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'0xa9f'"
-      ]
-     },
-     "execution_count": 131,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "hex(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0b110101001000000\n"
+      "0b110101001001110100\n20\n3.32208251953125\n"
      ]
     }
    ],
    "source": [
-    "b = bin(27200)\n",
-    "print(b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1110000000000111\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(twos_comp('0b0001111111111001'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.409420839653209"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.log2(.5)/np.log2(.75)"
+    "# convert fractional binary to decimal\n",
+    "b = bin(217716)\n",
+    "print(b)\n",
+    "num = 0\n",
+    "pos_cnt = 0\n",
+    "neg_cnt = 0\n",
+    "b = list(b)\n",
+    "print(len(b))\n",
+    "if len(b) > 18:\n",
+    "    digit = b[2:len(b)-16]\n",
+    "    frac = b[len(b)-16:]\n",
+    "else:\n",
+    "    digit = 0\n",
+    "    frac = b\n",
+    "\n",
+    "digits = 0\n",
+    "if digit != 0:\n",
+    "    for i, x in enumerate(digit):\n",
+    "        if digit[-1-i] == '0':\n",
+    "            pass\n",
+    "        else:\n",
+    "            digits += 2**i\n",
+    "else:\n",
+    "    digits = 0\n",
+    "\n",
+    "fract = 0\n",
+    "for i, x in enumerate(frac):\n",
+    "    if x == '0':\n",
+    "        pass\n",
+    "    else:\n",
+    "        fract += 2**(-i-1)\n",
+    "\n",
+    "my_number = digits+fract\n",
+    "print(my_number)"
    ]
   },
   {
@@ -460,27 +399,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4.353064959999999"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "2.0864*2.0864"
+    ""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -512,22 +440,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'0b11101'"
-      ]
-     },
-     "execution_count": 246,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "bin(29)"
+    ""
    ]
   },
   {
