--- a/read_weights_float_2_binary.ipynb
+++ b/read_weights_float_2_binary.ipynb
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,35 +225,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 87,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'101'"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "twos_comp(\"0b011\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 1 0\n.0001100110011001\n"
+      "-8 5245999999999995 0\n11000.100001100100\n"
      ]
     }
    ],
    "source": [
     "# Function returns octal representation \n",
-    "def float_bin(number, places = 3): \n",
+    "def float_bin(number, places=3): \n",
     "  \n",
     "    # split() seperates whole number and decimal  \n",
     "    # part and stores it in two seperate variables \n",
-    "    whole, dec = str(number).split(\".\") \n",
-    "    zeros = dec.count('0')\n",
+    "    zeros = 0\n",
+    "    # whole, dec = str(number).split(\".\") \n",
+    "    LN = len(str(1+number).split('.')[1])\n",
+    "    whole, dec = format(number, '0.{}f'.format(LN)).split(\".\") \n",
+    "    zeros = len(dec) - len(dec.lstrip('0'))\n",
+    "    # for z in dec:\n",
+    "    #     if z == '0':\n",
+    "    #         zeros += 1\n",
+    "    #     else:\n",
+    "    #         break\n",
+    "    # print(\"my zeros\", zeros)\n",
+    "    # zeros = dec.count('0')\n",
+    "    \n",
     "    print(whole, dec, zeros)\n",
     "    # Convert both whole number and decimal   \n",
     "    # part from string type to integer type \n",
+    "    dec = dec.split('0')\n",
+    "    for idx in dec:\n",
+    "        if idx != '':\n",
+    "            dec = idx \n",
+    "            break\n",
     "    whole = int(whole)\n",
-    "    dec = int (dec) \n",
+    "    dec = int(dec) \n",
+    "    # print(whole, dec)\n",
     "    \n",
     "    # Convert the whole number part to it's \n",
     "    # respective binary form and remove the \n",
     "    # \"0b\" from it. \n",
-    "    res = bin(whole).lstrip(\"0b\") + \".\"\n",
+    "    res = bin(abs(whole)).lstrip(\"0b\")\n",
+    "    if whole < 0:\n",
+    "        res = twos_comp(\"0b0\"+res)\n",
+    "    res += \".\"\n",
     "    # Iterate the number of times, we want \n",
     "    # the number of decimal places to be \n",
     "    for x in range(places): \n",
@@ -262,9 +304,12 @@
     "        # and seperate the whole number part \n",
     "        # and decimal part \n",
     "        # print(\"dec:\", dec, \"  whole:\", whole)\n",
-    "        \n",
-    "        whole, dec = str((decimal_converter(dec, zeros)) * 2.0).split(\".\")\n",
+    "\n",
+    "        DC = format(decimal_converter(dec, zeros) * 2.0, '0.{}f'.format(LN))\n",
+    "        whole, dec = DC.split(\".\")\n",
+    "        # print(\"whole\", whole, dec)\n",
     "        zeros = len(dec) - len(dec.lstrip('0'))\n",
+    "        # print(zeros)\n",
     "        # zeros = dec.count('0')\n",
     "        # print(whole, dec, zeros)\n",
     "        # Convert the decimal part \n",
@@ -285,11 +330,13 @@
     "  \n",
     "# Function converts the value passed as \n",
     "# parameter to it's decimal representation \n",
-    "def decimal_converter(num, zeros):  \n",
+    "\n",
+    "\n",
+    "def decimal_converter(num, zeros):\n",
     "    while num >= 1: \n",
     "        num /= 10\n",
     "    for i in range(zeros):\n",
-    "        num /=10\n",
+    "        num /= 10\n",
     "    # print(\"number:\", num)\n",
     "    return num \n",
     "  \n",
@@ -307,64 +354,112 @@
     "# print(decimal_converter(123))\n",
     "\n",
     "\n",
-    "print(float_bin(0.1, places=16))\n"
+    "print(float_bin(-8.5246, places=12))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'0x1999'"
+       "'01'"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a= 0b0001100110011001\n",
-    "hex(a)"
+    "twos_comp('0b11')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'555.003'"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "np.log2(.1)"
+    "format(555.0028, '0.3f')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0b110101001001110100\n20\n3.32208251953125\n"
+      "0xc9f 3231\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 0b110010011111\n",
+    "print(hex(a), int(a))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.499054421197101"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "math.log(3.1554, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0b100110100010000010011010100\n0.40051499754190445\n"
      ]
     }
    ],
    "source": [
     "# convert fractional binary to decimal\n",
-    "b = bin(217716)\n",
+    "b = bin(80807124)\n",
     "print(b)\n",
+    "bits = 28\n",
     "num = 0\n",
     "pos_cnt = 0\n",
     "neg_cnt = 0\n",
     "b = list(b)\n",
-    "print(len(b))\n",
-    "if len(b) > 18:\n",
-    "    digit = b[2:len(b)-16]\n",
-    "    frac = b[len(b)-16:]\n",
+    "if len(b) > bits+2:\n",
+    "    digit = b[2:len(b)-bits]\n",
+    "    frac = b[len(b)-bits:]\n",
     "else:\n",
     "    digit = 0\n",
     "    frac = b\n",
@@ -392,26 +487,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.321928094887363"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    ""
+    "import math\n",
+    "np.log10(.01)/math.log(0.25, 10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 117,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.12493873660829993"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "math.log(0.75, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0x202a3049'"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hex(539635785)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0b1111111111011111111000010'"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bin(539635785)\n",
+    "bin(33537986)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8087124"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0b0000000011110110110011001010100\n"
+   ]
   },
   {
    "cell_type": "code",
