--- a/read_weights_float_2_binary.ipynb
+++ b/read_weights_float_2_binary.ipynb
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 127,
    "metadata": {
     "collapsed": true
    },
@@ -254,13 +254,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-8 5245999999999995 0\n11000.100001100100\n"
+      "-7 1235 0\n1001.0001\n"
      ]
     }
    ],
    "source": [
     "# Function returns octal representation \n",
-    "def float_bin(number, places=3): \n",
+    "def float_bin(number, digits, places=3): \n",
     "  \n",
     "    # split() seperates whole number and decimal  \n",
     "    # part and stores it in two seperate variables \n",
@@ -292,9 +292,23 @@
     "    # Convert the whole number part to it's \n",
     "    # respective binary form and remove the \n",
     "    # \"0b\" from it. \n",
+    "    \n",
+    "    # clamp input to only 4-bits\n",
+    "    dig_cap = pow(2, digits) - 1 \n",
+    "    if whole < -dig_cap: \n",
+    "        whole = -dig_cap\n",
+    "    elif whole > dig_cap: \n",
+    "        whole = dig_cap\n",
+    "    else: \n",
+    "        pass\n",
+    "    \n",
     "    res = bin(abs(whole)).lstrip(\"0b\")\n",
     "    if whole < 0:\n",
     "        res = twos_comp(\"0b0\"+res)\n",
+    "        \n",
+    "        #pad with 1s to meet digits precision\n",
+    "        while len(res) < digits:\n",
+    "            res = '1' + res \n",
     "    res += \".\"\n",
     "    # Iterate the number of times, we want \n",
     "    # the number of decimal places to be \n",
@@ -354,27 +368,47 @@
     "# print(decimal_converter(123))\n",
     "\n",
     "\n",
-    "print(float_bin(-8.5246, places=12))\n"
+    "print(float_bin(-7.1235, digits=4, places=4))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'01'"
+       "241"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "twos_comp('0b11')"
+    "0b10001000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0b1000100010000001'"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bin(34945)"
    ]
   },
   {
