--- a/read_weights_float_2_binary.ipynb
+++ b/read_weights_float_2_binary.ipynb
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 210,
    "metadata": {
     "collapsed": true
    },
@@ -254,12 +254,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-7 1235 0\n1001.0001\n"
+      "44\n101100\n"
      ]
     }
    ],
    "source": [
     "# Function returns octal representation \n",
+    "# This does not work for negative numbers less than -1 \n",
     "def float_bin(number, digits, places=3): \n",
     "  \n",
     "    # split() seperates whole number and decimal  \n",
@@ -277,7 +278,7 @@
     "    # print(\"my zeros\", zeros)\n",
     "    # zeros = dec.count('0')\n",
     "    \n",
-    "    print(whole, dec, zeros)\n",
+    "    # print(whole, dec, zeros)\n",
     "    # Convert both whole number and decimal   \n",
     "    # part from string type to integer type \n",
     "    dec = dec.split('0')\n",
@@ -294,7 +295,7 @@
     "    # \"0b\" from it. \n",
     "    \n",
     "    # clamp input to only 4-bits\n",
-    "    dig_cap = pow(2, digits) - 1 \n",
+    "    dig_cap = pow(2, digits) - 1\n",
     "    if whole < -dig_cap: \n",
     "        whole = -dig_cap\n",
     "    elif whole > dig_cap: \n",
@@ -303,13 +304,7 @@
     "        pass\n",
     "    \n",
     "    res = bin(abs(whole)).lstrip(\"0b\")\n",
-    "    if whole < 0:\n",
-    "        res = twos_comp(\"0b0\"+res)\n",
-    "        \n",
-    "        #pad with 1s to meet digits precision\n",
-    "        while len(res) < digits:\n",
-    "            res = '1' + res \n",
-    "    res += \".\"\n",
+    "    # res += \".\"\n",
     "    # Iterate the number of times, we want \n",
     "    # the number of decimal places to be \n",
     "    for x in range(places): \n",
@@ -339,13 +334,25 @@
     "        # Keep adding the integer parts  \n",
     "        # receive to the result variable \n",
     "        res += whole \n",
-    "  \n",
+    "    if str(number).__contains__('-'):\n",
+    "        res = twos_comp(\"0b0\"+res)\n",
+    "    \n",
+    "        #pad with 1s to meet digits precision\n",
+    "        while len(res) < digits:\n",
+    "            res = '1' + res \n",
+    "    convert_2_int(res)\n",
     "    return res \n",
     "  \n",
+    "\n",
+    "\n",
+    "def convert_2_int(num):\n",
+    "    prod = 0\n",
+    "    for i in range(len(num)):\n",
+    "        prod += 2**i * int(num[-1-i])\n",
+    "    print(prod)\n",
+    "    \n",
     "# Function converts the value passed as \n",
     "# parameter to it's decimal representation \n",
-    "\n",
-    "\n",
     "def decimal_converter(num, zeros):\n",
     "    while num >= 1: \n",
     "        num /= 10\n",
@@ -368,47 +375,235 @@
     "# print(decimal_converter(123))\n",
     "\n",
     "\n",
-    "print(float_bin(-7.1235, digits=4, places=4))\n"
+    "print(float_bin(-1.25, digits=4, places=4))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 211,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15 -6 -5\n158\n10011110\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Function returns octal representation \n",
+    "# This does not use 2's complement and only assign a fixed bit for the sign \n",
+    "def float_bin_all(number, digits, places=3): \n",
+    "  \n",
+    "    # split() seperates whole number and decimal  \n",
+    "    # part and stores it in two seperate variables \n",
+    "\n",
+    "    LN = len(str(1+number).split('.')[1])\n",
+    "    whole, dec = format(number, '0.{}f'.format(LN)).split(\".\") \n",
+    "    zeros = len(dec) - len(dec.lstrip('0'))\n",
+    "    \n",
+    "    # Convert both whole number and decimal   \n",
+    "    # part from string type to integer type \n",
+    "    dec = dec.split('0')\n",
+    "    for idx in dec:\n",
+    "        if idx != '':\n",
+    "            dec = idx \n",
+    "            break\n",
+    "    whole = int(whole)\n",
+    "    dec = int(dec) \n",
+    "\n",
+    "    \n",
+    "    # Convert the whole number part to it's \n",
+    "    # respective binary form and remove the \n",
+    "    # \"0b\" from it. \n",
+    "    \n",
+    "    # clamp input to only 4-bits\n",
+    "    dig_cap = pow(2, digits) - 1\n",
+    "    print(dig_cap, whole, whole+1)\n",
+    "    if whole < -dig_cap: \n",
+    "        whole = -dig_cap\n",
+    "        print(whole)\n",
+    "    elif whole > dig_cap: \n",
+    "        whole = dig_cap\n",
+    "    else: \n",
+    "        pass\n",
+    "    \n",
+    "    res = bin(abs(whole)).lstrip(\"0b\")\n",
+    "\n",
+    "    # res += \".\"\n",
+    "    # Iterate the number of times, we want \n",
+    "    # the number of decimal places to be \n",
+    "    for x in range(places): \n",
+    "  \n",
+    "        # Multiply the decimal value by 2  \n",
+    "        # and seperate the whole number part \n",
+    "        # and decimal part \n",
+    "        # print(\"dec:\", dec, \"  whole:\", whole)\n",
+    "\n",
+    "        DC = format(decimal_converter(dec, zeros) * 2.0, '0.{}f'.format(LN))\n",
+    "        whole, dec = DC.split(\".\")\n",
+    "        # print(\"whole\", whole, dec)\n",
+    "        zeros = len(dec) - len(dec.lstrip('0'))\n",
+    "        # print(zeros)\n",
+    "        # zeros = dec.count('0')\n",
+    "        # print(whole, dec, zeros)\n",
+    "        # Convert the decimal part \n",
+    "        # to integer again\n",
+    "        if dec.__contains__('e'):\n",
+    "            dec = dec.split('e')\n",
+    "            digit = int(dec[0])\n",
+    "            exponent = pow(10, int(dec[1]))\n",
+    "            dec = digit*exponent\n",
+    "        else:\n",
+    "            dec = int(dec) \n",
+    "        # print(whole, dec, zeros)\n",
+    "        # Keep adding the integer parts  \n",
+    "        # receive to the result variable \n",
+    "        res += whole\n",
+    "    if str(number).__contains__('-'):\n",
+    "        res = twos_comp(\"0b0\"+res)\n",
+    "    \n",
+    "        #pad with 1s to meet digits precision\n",
+    "        while len(res) < digits:\n",
+    "            res = '1' + res \n",
+    "    convert_2_int(res)\n",
+    "    return res \n",
+    "  \n",
+    "\n",
+    "\n",
+    "def convert_2_int(num):\n",
+    "    prod = 0\n",
+    "    for i in range(len(num)):\n",
+    "        prod += 2**i * int(num[-1-i])\n",
+    "    print(prod)\n",
+    "    \n",
+    "# Function converts the value passed as \n",
+    "# parameter to it's decimal representation \n",
+    "def decimal_converter(num, zeros):\n",
+    "    while num >= 1: \n",
+    "        num /= 10\n",
+    "    for i in range(zeros):\n",
+    "        num /= 10\n",
+    "    # print(\"number:\", num)\n",
+    "    return num \n",
+    "  \n",
+    "# Driver Code \n",
+    "  \n",
+    "# Take the user input for  \n",
+    "# the floating point number \n",
+    "# n = input(\"Enter your floating point value : \\n\") \n",
+    "#   \n",
+    "# # Take user input for the number of \n",
+    "# # decimal places user want result as \n",
+    "# p = int(input(\"Enter the number of decimal places of the result : \\n\")) \n",
+    "  \n",
+    "# print(float_bin(n, places = p)) \n",
+    "# print(decimal_converter(123))\n",
+    "\n",
+    "\n",
+    "print(float_bin_all(-6.125, digits=4, places=4))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "241"
+       "2916"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "0b10001000"
+    "# perform multiplication on original numbers before two's complement then assign the sign based on if they're greater than 127"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "98 98\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 0b10011110\n",
+    "x = (x^0b11111111)+1 \n",
+    "print(x, 0b01100010)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'0b1000100010000001'"
+       "'0b11011100100'"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 227,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bin(34945)"
+    "bin(98*18)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "228"
+      ]
+     },
+     "execution_count": 230,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0b10000000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1764"
+      ]
+     },
+     "execution_count": 226,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "98*18"
    ]
   },
   {
